# sagahealth-custodian-fe

./: .gitignore  CLAUDE.md  README.md  app.json  index.html  package-lock.json  replit.md  run_dev.py
.expo/: settings.json
.expo/types/: router.d.ts
app/: +html.tsx  _layout.tsx  dashboard.tsx  documents.tsx  nearby-services.tsx  onboarding.tsx  trade.tsx
app/(tabs)/: _layout.tsx  accounts.tsx  index.tsx  investments.tsx  marketplace.tsx
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d8755cfe27b_add_auth_fields_and_sessions_table.py  55e309126cf8_initial.py  a3f1b8c2d9e0_add_email_otp_to_sessions.py  b7c4d5e6f1a2_unique_constraint_on_user_email.py  c8d5e6f7a2b3_add_support_tickets.py
backend/sagahealth_custodian_api/: api.py  app.py  auth.py  auth_models.py  auth_router.py  conf.py  email_service.py  models.py  support_router.py  util.py
backend/sagahealth_custodian_api/db/: database.py  models.py
backend/scripts/: delete_lynx_member.py
components/: KeyboardAwareScrollViewCompat.tsx  MapWrapper.native.tsx  MapWrapper.web.tsx
constants/: colors.ts
contexts/: HSAContext.tsx
frontend/: app.json  package-lock.json  package.json  replit.md  vercel.json
frontend/app/: _layout.tsx  account-details.tsx  contributions.tsx  dashboard.tsx  email-otp-verify.tsx  help-support.tsx  login.tsx  mfa-verify.tsx  onboarding.tsx  reimbursement.tsx  rewards.tsx  security.tsx  trade.tsx
frontend/components/: MobileWebFrame.tsx  MobileWebFrame.web.tsx
frontend/contexts/: HSAContext.tsx
lib/: platform.ts
(+9 files in other folders)
